--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <title>山田太郎のポートフォリオサイト</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <h1>山田太郎</h1>
-    <p>UI/UXデザイナー見習いです。</p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Calendar</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <table>
+    <thead>
+      <tr>
+        <th id="prev">&laquo;</th>
+        <th id="title" colspan="5">2020/05</th>
+        <th id="next">&raquo;</th>
+      </tr>
+      <tr>
+        <th>Sun</th>
+        <th>Mon</th>
+        <th>Tue</th>
+        <th>Wed</th>
+        <th>Thu</th>
+        <th>Fri</th>
+        <th>Sat</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td id="today" colspan="7">Today</td>
+      </tr>
+    </tfoot>
+  </table>
+
+  <script src="js/main.js"></script>
+</body>
 </html>
